--- a/css/style.css
+++ b/css/style.css
@@ -732,7 +732,7 @@ img{
 }
 
 .main-header .sticky-header .main-menu .navigation > li > a{
-	color:#181818;
+	color:#ffffff;
 	padding:15px 15px !important;
 	line-height:30px;
 	font-size:16px;
@@ -1094,10 +1094,10 @@ img{
 }
 
 .fixed-header .sticky-header{
-	z-index:999;
+	z-index:99999;
 	opacity:1;
 	visibility:visible;
-	background-color:#ffffff;
+	background-color:#222222;
 	-webkit-box-shadow: 0 0 20px rgba(51,51,51,.1);
 	-moz-box-shadow: 0 0 20px rgba(51,51,51,.1);
 	-ms-box-shadow: 0 0 20px rgba(51,51,51,.1);
