--- a/css/responsive.css
+++ b/css/responsive.css
@@ -894,7 +894,7 @@
 	}
 
 	.header-style-four .header-lower{
-		background-color: #ffffff;
+		background-color: #333333;
 	}
 	
 	.header-style-three .header-top .top-right{
