--- a/css/style.css
+++ b/css/style.css
@@ -2033,7 +2033,7 @@ button:focus{
 
 .about-us{
 	position: relative;
-	padding: 100px 0 80px;
+	padding: 100px 0 0 0;
 }
 
 .about-us .content-column{
